AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = 	autogen.sh TODO README

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = 	src/utils \
		src/bus \
		src/core \
		test \
		extra \
		docs 		

MAINTAINERCLEANFILES = config.h.in Makefile.in configure stamp-h1 config.log py-compile \
	ltmain.sh missing install-sh depcomp config.sub config.guess aclocal.m4
 
